feat: implement service integrations and dashboard charts
Service Implementations:
- ZAP Client: Add Docker support with dockerode, implement native process spawning,
  add vulnerability conversion helpers (ZAP alerts → Vulnerability format)
- Nuclei Executor: Add custom headers support for authenticated scanning
- Browser Service: Add screenshot, PDF export, page HTML, title methods

UI Components:
- Add Charts component with SeverityChart, DonutChart, TrendLineChart
- Add chart styles to global.css
- Update Dashboard with vulnerability charts and statistics

Testing:
- Add E2E integration tests (17 tests covering services, stores, utilities)
- Increase total test coverage to 80 tests

Dependencies:
- Add dockerode package for Docker container management
- Add @playwright/test for E2E testing

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Security Team",
   "license": "MIT",
   "dependencies": {
+    "dockerode": "^4.0.9",
     "electron": "^35.0.0",
     "keytar": "^7.9.0",
     "lucide-react": "^0.563.0",
@@ -33,6 +34,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
     "@testing-library/react": "^16.3.2",
     "@types/keytar": "^4.4.0",
     "@types/node": "^22.0.0",
